Added example page

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
-    "build": "tsc && prisma generate",
+    "build": "tsc && prisma generate && cp -R public dist/public",
     "start": "node dist/src/server.js",
     "seed": "ts-node prisma/seed.ts"
   },
