--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "noImplicitAny": true,
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src", "prisma/seed.ts"],
+  "include": ["src", "prisma/seed.ts",],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
   "files": true  
